@@ -7,6 +7,7 @@ Bla bla
 ** Fixed a bug in Webrat selects (Tim Glen)
 
 * New features
+** Steps can be called from other steps (#3, Bryan Helmkamp, Aslak Hellesøy)
 ** Added But keyword to all languages (#21, Aslak Hellesøy)
 ** Added --source option to display step definition location next to step text (#26, Joseph Wilk)
 ** Added more Webrat steps (#25, Tim Glen)
